Arreglado bug cola P2_ST