@@ -8,6 +8,8 @@ import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Random;
 import java.util.Scanner;
 
 /**
@@ -18,7 +20,7 @@ public class Franquicia {
     String name;
     int winners;
     Cola<Personaje> p1, p2, p3, reinforcement;
-    Cola<Personaje> characters;
+    ListaEnlazada<Personaje> characters;
     Interfaz GUI;
     
     public Franquicia(String name, Interfaz GUI){
@@ -28,29 +30,13 @@ public class Franquicia {
         p2 = new Cola<>();
         p3 = new Cola<>();
         reinforcement = new Cola<>();
-        characters = new Cola<>();
+        characters = new ListaEnlazada<>();
         loadCharacters();
     }
     
     public void loadCharacters(){
-        String filename = "src\\ArchivosTXT\\" + name + ".txt" ;
+        String filename = "src\\ArchivosTXT\\" + name + ".txt";
         
-//        try (BufferedReader br = new BufferedReader(new FileReader(filename))) {
-//            String line;
-//            while ((line = br.readLine()) != null) {
-//                if (line.startsWith("Name:")) {
-//                    String name = line.substring(6).trim(); // Obtener el nombre del personaje
-//                    int hp = Integer.parseInt(br.readLine().substring(4).trim()); // Obtener el HP
-//                    int strength = Integer.parseInt(br.readLine().substring(10).trim()); // Obtener la fuerza
-//                    int agility = Integer.parseInt(br.readLine().substring(8).trim()); // Obtener la agilidad
-//                    int ability = Integer.parseInt(br.readLine().substring(10).trim()); // Obtener las habilidades
-//
-//                }
-//            }
-//        } catch (IOException e) {
-//            System.err.println("Error al leer el archivo: " + e.getMessage());
-//        }
-      
         try{
            File myObj = new File(filename);
            Scanner myReader = new Scanner(myObj);
@@ -77,7 +63,7 @@ public class Franquicia {
                     }
                 
                 }  else{
-                    characters.InsertInFinal(newPersonaje);
+                    characters.append(newPersonaje);
                 }
            }
         } catch (FileNotFoundException e) {
@@ -96,9 +82,8 @@ public class Franquicia {
     
     public void addNewCharacterToQueue(){
         if(characters.getSize() > 0){
-            Node<Personaje> node = characters.getFirst();
-            Personaje c = node.getElement();
-            characters.remove();
+            Personaje c = characters.get(0);
+            characters.delete(c);
             switch(c.atributosCalidad){
                 case 0, 1 -> p3.InsertInFinal(c);
                 case 2 -> p2.InsertInFinal(c);
@@ -113,7 +98,7 @@ public class Franquicia {
             int random = (int)(Math.random() * 100);
             if(random <= 40){
                 p1.InsertInFinal(c);
-                if(name.equals("Star Wars")){
+                if(name.equals("StarWars")){
                     GUI.actualizarP1_SW();
                     GUI.actualizarRef_SW();
                 }else{
@@ -122,7 +107,7 @@ public class Franquicia {
                 }
             }else{
                 reinforcement.InsertInFinal(c);
-                if(name.equals("Star Wars")){
+                if(name.equals("StarWars")){
                     GUI.actualizarRef_SW();
                 }else{
                     GUI.actualizarRef_ST();
@@ -137,10 +122,10 @@ public class Franquicia {
             Personaje c = node.getElement();
             boolean movePriority = c.actualizarContador();
             if(movePriority){
-                p2.remove();
+                p2.removeN(c); //OJO
                 p1.InsertInFinal(c);
                 
-                if(name.equals("Star Wars")){
+                if(name.equals("StarWars")){
                     GUI.actualizarP1_SW();
                     GUI.actualizarP2_SW();
                 }else{
@@ -156,10 +141,10 @@ public class Franquicia {
             Personaje c = node.getElement();
             boolean movePriority = c.actualizarContador();
             if(movePriority){
-                p3.remove();
+                p3.removeN(c); //OJO
                 p2.InsertInFinal(c);
                 
-                if(name.equals("Star Wars")){
+                if(name.equals("StarWars")){
                     GUI.actualizarP2_SW();
                     GUI.actualizarP3_SW();
                 }else{
